// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements/Button Default 1`] = `
<button
  className="sc-eCYdqJ LAFSk"
>
  Default Button
</button>
`;

exports[`Storyshots Elements/Button Primary 1`] = `
<button
  className="sc-eCYdqJ sc-jSMfEi LAFSk dSXEgT"
>
  Primary Button
</button>
`;

exports[`Storyshots Elements/Pagination Demo 1`] = `
<div
  className="sc-gKXOVf ihELLc"
>
  <nav
    className="sc-iBkjds"
  >
    <ul
      className="sc-ftvSup zoAYh"
    >
      <button
        className="sc-jqUVSM hYjYIo"
        onClick={[Function]}
      >
        <span
          className="sc-bczRLJ kcNxQY"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-sc-ea9ulj-0 jChdGK"
            fill="currentColor"
            focusable="false"
            height="2.2rem"
            viewBox="0 0 16 16"
            width="2.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM iSMhjS"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
          onClick={[Function]}
        >
          2
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
          onClick={[Function]}
        >
          3
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
          onClick={[Function]}
        >
          4
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
          onClick={[Function]}
        >
          5
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
        >
          ...
        </button>
      </li>
      <li
        className="sc-papXJ hqedpF"
      >
        <button
          className="sc-jqUVSM hYjYIo"
          onClick={[Function]}
        >
          10
        </button>
      </li>
      <button
        className="sc-jqUVSM hYjYIo"
        onClick={[Function]}
      >
        <span
          className="sc-bczRLJ kcNxQY"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-sc-ea9ulj-0 jChdGK"
            fill="currentColor"
            focusable="false"
            height="2.2rem"
            viewBox="0 0 16 16"
            width="2.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Elements/SelectableTable Demo 1`] = `
<table
  className="sc-iqcoie mCRLu"
  width=""
>
  <thead
    className="sc-ksZaOG jIDUkP"
  >
    <tr
      className="sc-crXcEl cgyQWj"
    >
      <th
        className="sc-evZas jLxYNV"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </th>
      <th
        className="sc-evZas bcxiyW"
      >
        <div>
          First Name
        </div>
        <div
          className="sc-kDDrLX htMsPT"
          height="auto"
          onMouseDown={[Function]}
        />
      </th>
      <th
        className="sc-evZas bcxiyW"
      >
        <div>
          Last Name
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    className="sc-hAZoDl jddhlc"
  >
    <tr
      className="sc-crXcEl cgyQWj"
    >
      <td
        className="sc-breuTD kuYOSf"
        width="50px"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </td>
      <td
        className="sc-breuTD eVrWdI"
        onClick={[Function]}
      >
        John
      </td>
      <td
        className="sc-breuTD eVrWdI"
        onClick={[Function]}
      >
        Lennon
      </td>
    </tr>
    <tr
      className="sc-crXcEl cgyQWj"
    >
      <td
        className="sc-breuTD kuYOSf"
        width="50px"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </td>
      <td
        className="sc-breuTD eVrWdI"
        onClick={[Function]}
      >
        Sean
      </td>
      <td
        className="sc-breuTD eVrWdI"
        onClick={[Function]}
      >
        Lennon
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Form/InputField Default 1`] = `
<input
  className="sc-fnykZs cBppzQ"
  placeholder="Type here"
/>
`;

exports[`Storyshots Form/InputField Error 1`] = `
<input
  className="sc-fnykZs cBppzQ is-invalid"
  placeholder="Type here"
/>
`;

exports[`Storyshots Form/SelectField Default 1`] = `
<div
  className="sc-fEOsli iBLSxb"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
  </div>
</div>
`;

exports[`Storyshots Form/SelectField Error 1`] = `
<div
  className="sc-fEOsli iBLSxb is-invalid"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
    <div
      className="sc-hHLeRK kmyAWG"
      onClick={[Function]}
    >
      <span
        className="sc-bczRLJ kcNxQY"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 jChdGK"
          fill="currentColor"
          focusable="false"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="m13.41 12 4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
              data-name="close"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form/SelectField Multiple Select 1`] = `
<div
  className="sc-fEOsli iBLSxb"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
    <div
      className="sc-hHLeRK kmyAWG"
      onClick={[Function]}
    >
      <span
        className="sc-bczRLJ kcNxQY"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 jChdGK"
          fill="currentColor"
          focusable="false"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="m13.41 12 4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
              data-name="close"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;
